0.1.2 (May 5, 2014)
-------------------

Added an install script.

Added find: "find all files that contain california"

Added datetime: "what day of the week is it"

Added processes: "show me my processes matching log"

Added version: "whats my version of ruby".


0.1.1 (May 4, 2014)
-------------------

Added ip address: "whats my ip address"

Added who's logged in: "who else is logged in"

Added another iTunes song finder: "what song is playing"

Added this changelog.


0.1.0 (May 4, 2014)
-------------------

First public launch.